Updated some images

--- a/about.html
+++ b/about.html
@@ -91,15 +91,18 @@
                     <div class="row">
                         <div class="col-xs-12 col-sm-4 col-md-3">
                             <div class="headshot">
-                                <img class="img-fluid" src="img/profile-pic.png" alt="Headshot of Amanda Wondergem">
+                                <img class="img-fluid" src="img/about/profile-pic.png" alt="Headshot of Amanda Wondergem">
                             </div>
                         </div>
                         <div class="col-xs-12 col-sm-8 col-md-9">
                             <h1>Hi, I'm Amanda Wondergem!</h1>
-                            <p>I’m a visual designer based in Vancouver with 8+ years of experience simplifying complex content. At Borrowell, I drove the acquisition of 1.7M+ members with static and animated graphics and increased revenue by 16% with an explainer video. I also built design libraries and optimized brand impact.
+                            <p>I’m a visual designer based in Vancouver with 8+ years of experience simplifying complex content. At Borrowell, I contributed to Borrowell's growth by driving the acquisition of 1.7M+ members through static and animated graphics and increased revenue by 16% with an explainer video. I also built design libraries and optimized brand impact.
                             </p> 
-                            <p>Aside from design, I have a passion for storytelling which led me to write and illustrate stories as a child and more recently, create paintings. I launched a successful side business using my brand, design, and marketing skills. I'm eager to expand my expertise to new industries and help tell your brand's story next.
-                            </p> 
+                            <p>Aside from design, I have a passion for storytelling which led me to write and illustrate stories as a child and more recently, create paintings. I launched a <a href="https://amandawondergemart.com/" target="_blank">successful side business</a> using my brand, design, and marketing skills.</p>
+                            <p>I also love exploring the mountains by bike or foot. Spending time in nature inspires a lot of my creative work. I'm eager to expand my expertise to new industries and help tell your brand's story next.</p> 
+                        </div>
+                        <div class="col-xs-12 col-md-8 offset-md-2">
+                            <img class="img-fluid" src="img/about/riding-through-mountains.jpg" alt="Amanda on a bike riding through the mountains">
                         </div>
                     </div>
                     </div>
