--- a/portfolio-pages/borrowell-app-store-listing.html
+++ b/portfolio-pages/borrowell-app-store-listing.html
@@ -184,18 +184,44 @@
                     </div>
 
                     <div class="section">
-                        <h3>The plan</h3>
-                        <p>Collaborating with a marketing stakeholder, we identified the keywords and themes to target with each set of App Store screens, which included free credit score/report, Credit Builder, Rent Advantage, build credit and financial products.</p>
+                        <div class="row align-center">
+                            <div class="col-xs-12 col-md-6">
+                                <h3>The plan</h3>
+                                <p>Collaborating with a marketing stakeholder, we identified the keywords and themes to target with each set of App Store screens, which included free credit score/report, Credit Builder, Rent Advantage, build credit and financial products.</p>
+                                <h3>App Store image sets</h3>
+                                <p>My hypothesis was that placing relevant information at the beginning of the set of screens, within the first two images, would make it more impactful to the user, offer value and consequently boost the click-through rate (CTR).</p>        
+                            </div>
+                            <div class="col-xs-12 col-md-6">
+                                <img class="img-fluid" src="../img/borrowell-app-store-listing/app-screens-2023-credit-report.png" alt="App Store screens from 2023 focusing on free credit score and report">
+                                <p class="image-caption">Set of images for App Store optimization listings focused on the theme of free credit score/report.</p>
+                            </div>
+                         </div>
                     </div>
 
                     <div class="section">
-                        <h3>App Store image sets</h3>
-                        <p>My hypothesis was that placing relevant information at the beginning of the set of screens, within the first two images, would make it more impactful to the user, offer value and consequently boost the click-through rate (CTR).</p>
+                        <div class="row align-center">
+                            <div class="col-xs-12 col-md-6">
+                                <img class="img-fluid" src="../img/borrowell-app-store-listing/app-screens-2023-credit-builder.png" alt="App Store screens from 2023 focusing on Credit Builder">
+                                <p class="image-caption">Set of images for App Store optimization listings focused on the theme of Credit Builder.</p>
+                            </div>
+                            <div class="col-xs-12 col-md-6">
+                                <img class="img-fluid" src="../img/borrowell-app-store-listing/app-screens-2023-rent-advantage.png" alt="App Store screens from 2023 focusing on Rent Advantage">
+                                <p class="image-caption">Set of images for App Store optimization listings focused on the theme of Rent Advantage.</p>
+                            </div>
+                         </div>
                     </div>
 
                     <div class="section">
-                        <img class="img-fluid" src="../img/borrowell-app-store-listing/app-screens-2023.png" alt="App Store screens from 2023">
-                        <p class="image-caption">Sets of images for App Store optimization listings based on the following keywords/themes: free credit score/report, Credit Builder, Rent Advantage, build credit and financial products.</p>
+                        <div class="row align-center">
+                            <div class="col-xs-12 col-md-6">
+                                <img class="img-fluid" src="../img/borrowell-app-store-listing/app-screens-2023-build-credit.png" alt="App Store screens from 2023 focusing on building credit">
+                                <p class="image-caption">Set of images for App Store optimization listings focused on the theme of building credit.</p>
+                            </div>
+                            <div class="col-xs-12 col-md-6">
+                                <img class="img-fluid" src="../img/borrowell-app-store-listing/app-screens-2023-financial-products.png" alt="App Store screens from 2023 focusing on financial products">
+                                <p class="image-caption">Set of images for App Store optimization listings focused on the theme of financial products.</p>
+                            </div>
+                         </div>
                     </div>
 
                     <div class="section">
