--- a/tidbits.html
+++ b/tidbits.html
@@ -92,28 +92,31 @@
                     <p>These are a few of my client and personal projects, some of which were collaborative efforts.</p>
                 </div>
             </div>
-            <br><br>
-            <div class="row">
-                <div class="col-xs-12">
-                    <div class="tidbits-list">
-                        <img src="img/tidbits/shapes-scene.gif" alt="Animation of random shapes">
-                        <img src="img/tidbits/borrowell-rent-advantage-03.png" alt="Illustration of a character holding a phone with a speech bubble of a credit score dial going up">
-                        <img src="img/tidbits/rent-advantage-social-media.gif" alt="Unlock more with Rent Advantage">
-                        <img src="img/tidbits/borrowell-rent-advantage-01.png" alt="Illustration of a calendar, phone and a key">
-                        <img src="img/tidbits/besties.gif" alt="Animation of two sockies high fiving">
-                        <img src="img/tidbits/borrowell-characters.png" alt="Illustration of four characters">
-                        <img src="img/tidbits/D.png" alt="Illustrations within the letter D">
-                        <img src="img/tidbits/borrowell-mug-animation.gif" alt="Animation of a mug with hot chocolate and marshmallows">
-                        <img src="img/tidbits/water-scene.gif" alt="Animation inspired by water">
-                        <img src="img/tidbits/J.png" alt="Illustrations around the letter J">
-                        <img src="img/tidbits/borrowell-rent-advantage-02.png" alt="Illustration a phone in front of buildings">
-                        <img src="img/tidbits/q.gif" alt="Shape animation showing the letter Q">
-                        <img src="img/tidbits/W.png" alt="Illustration of the letter W">
-                        <img src="img/tidbits/holiday-card-2018.jpg" alt="Borrowell holiday card">
-                        <img src="img/tidbits/moonlight-camping.gif" alt="Animation of a campsite">
-                        <img src="img/tidbits/panda.png" alt="Illustration of a panda">
+
+            <div class="section">
+                <div class="row">
+                    <div class="col-xs-12">
+                        <div class="tidbits-list">
+                            <img src="img/tidbits/shapes-scene.gif" alt="Animation of random shapes">
+                            <img src="img/tidbits/borrowell-rent-advantage-03.png" alt="Illustration of a character holding a phone with a speech bubble of a credit score dial going up">
+                            <img src="img/tidbits/rent-advantage-social-media.gif" alt="Unlock more with Rent Advantage">
+                            <img src="img/tidbits/borrowell-rent-advantage-01.png" alt="Illustration of a calendar, phone and a key">
+                            <img src="img/tidbits/besties.gif" alt="Animation of two sockies high fiving">
+                            <img src="img/tidbits/borrowell-characters.png" alt="Illustration of four characters">
+                            <img src="img/tidbits/D.png" alt="Illustrations within the letter D">
+                            <img src="img/tidbits/borrowell-mug-animation.gif" alt="Animation of a mug with hot chocolate and marshmallows">
+                            <img src="img/tidbits/water-scene.gif" alt="Animation inspired by water">
+                            <img src="img/tidbits/J.png" alt="Illustrations around the letter J">
+                            <img src="img/tidbits/borrowell-rent-advantage-02.png" alt="Illustration a phone in front of buildings">
+                            <img src="img/tidbits/q.gif" alt="Shape animation showing the letter Q">
+                            <img src="img/tidbits/W.png" alt="Illustration of the letter W">
+                            <img src="img/tidbits/holiday-card-2018.jpg" alt="Borrowell holiday card">
+                            <img src="img/tidbits/moonlight-camping.gif" alt="Animation of a campsite">
+                            <img src="img/tidbits/panda.png" alt="Illustration of a panda">
+                        </div>
                     </div>
-                 </div>
+                </div>
+            </div>
         </div>
    </div><!--END TIDBITS-->
 
