--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             <div class="row">
                 <div class="col-xs-12">
                     <h1>Let's tell your brand story</h1>
-                    <p>Hi, I'm Amanda Wondergem a visual designer, outdoor adventurer and dog lover who helps brands tell their stories.</p>
+                    <p>Hi, I'm Amanda Wondergem, a visual designer, outdoor adventurer and dog lover who helps brands tell their stories.</p>
                 </div>
             </div>
             <br>
