Added to Borrowell branding case study
Added iconography _ marketing website type styles & design system to Borrowell branding

--- a/portfolio-pages/borrowell-branding.html
+++ b/portfolio-pages/borrowell-branding.html
@@ -91,7 +91,7 @@
            <div class="row">
                 <div class="col-xs-12 col-xl-8 offset-xl-2">
                     <h1>Borrowell's Branding</h1>
-                    <p>An overview of Borrowell's brand evolution from 2018-2023.</p>
+                    <p>An overview of Borrowell's brand development and evolution from 2018-2023.</p>
 
                     <div class="section">
                         <div class="row align-center">
@@ -119,6 +119,7 @@
                     <p><span class="bold">My role involved:</span>
                         <br>
                         <span class="tag">Brand & identity design</span>
+                        <span class="tag">Design systems & libraries</span>
                         <span class="tag">Visual design</span>
                         <span class="tag">Illustration</span>
                         <span class="tag">Animation</span>
@@ -141,7 +142,7 @@
                             </div>
                             <div class="col-xs-12 col-md-6">
                                 <img class="img-fluid" src="../img/borrowell-branding/borrowell-branding-2018.png" alt="Some illustrations with a limited colour palette">
-                                <p class="image-caption">Some initial designs I created that used the branding established by an external company, prior to me joining Borrowell.</p>        
+                                <p class="image-caption">I developed initial designs that adhered to the established branding, which was crafted by an external company before my tenure at Borrowell.</p>        
                             </div>
                         </div>
                    </div>
@@ -165,7 +166,8 @@
                     </div>
 
                     <div class="section">
-                        <h3>Establishing style guides and templates</h3>
+                        <h3>Establishing design systems</h3>
+                        <p>Collaborating with the design team, I played a key role in developing comprehensive colour palettes, icon libraries, illustrations and character libraries. Additionally, I took the lead in establishing a design system specifically for the marketing website.</p>
                         <div class="row align-center">
                             <div class="col-xs-12 col-md-6 ">
                                 <h4>Refining the colour palette</h4>
@@ -181,15 +183,29 @@
 
                     <div class="section">
                         <div class="row align-center flip-wrap-order">
-                            <div class="col-xs-12 col-md-6">
-                                <img class="img-fluid" src="../img/borrowell-branding/characters-2019@2x.png" alt="Character ilustrations, including larger limbs and purple skin tones.">
-                                <p class="image-caption">Kate initial character's for Borrowell using pink and purple skin tones for diversity.</p>
+                            <div class="col-xs-12 col-md-6 ">
+                                <img class="img-fluid" src="../img/borrowell-branding/icon-library@2x.png" alt="Borrowell's icon library">
+                                <p class="image-caption">Borrowell's icon library depicting concepts such as credit score, credit mix, credit utilization, credit inquiries, payment history, reward credit cards and email.</p>
                             </div>
+                            <div class="col-xs-12 col-md-6">
+                                <h4>Icon library</h4>
+                                <p>We created and implemented an extensive icon library at Borrowell, unifying our branding across various channels, including social media, emails and within the product. By educating our teams on the purpose and applications of these icons, we ensured consistent usage across all channels. This was achieved by employing consistent shapes throughout the icon designs, resulting in a cohesive aesthetic.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="section">
+                        <div class="row align-center">
                             <div class="col-xs-12 col-md-6">
                                 <h4>Character diversity</h4>
                                 <p>Kate started creating illustrations for each project, using purple and pink skin tones to add diversity. However, we eventually made the decision that natural skin tones would better represent diversity. To make finances more approachable, we opted for recognizable and relatable characters.
                                 </p>
                             </div> 
+                            <div class="col-xs-12 col-md-6">
+                                <img class="img-fluid" src="../img/borrowell-branding/characters-2019@2x.png" alt="Character ilustrations, including larger limbs and purple skin tones.">
+                                <p class="image-caption">Kate initial character's for Borrowell using pink and purple skin tones for diversity.</p>
+                            </div>
                         </div>
                     </div>
 
@@ -199,7 +215,34 @@
                     </div>
 
                     <div class="section">
-                        <h4>Creating templates for efficiency</h4>
+                        <div class="row">
+                            <div class="col-xs-12">
+                                <h4>Design system for marketing site</h4>
+                                <p>Following the initial design of the marketing website by an agency, I took charge of documenting the type styles and developing reusable components in Figma. In doing so, I meticulously incorporated the essential states required to ensure compliance with accessibility standards.</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="section">
+                        <div class="row">
+                            <div class="col-xs-12 col-lg-10 offset-lg-1">
+                                <img class="img-fluid" src="../img/borrowell-branding/marketing-website-type-styles-desktop.png" alt="Desktop type styles for Borrowell's marketing website">
+                                <p class="image-caption">Type style documentation for Borrowell's marketing site.</p>        
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="section">
+                        <div class="row">
+                            <div class="col-xs-12 col-lg-10 offset-lg-1">
+                                <img class="img-fluid" src="../img/borrowell-branding/marketing-site-design-system.png" alt="Some components from Borrowell's marketing website design system.">
+                                <p class="image-caption">Some components from the design system for Borrowell's marketing website including: buttons, accordions, layouts and tables.</p>        
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="section">
+                        <h3>Scaling with templates</h3>
                         <p>With remote work being the norm in 2020, templates became crucial for scalability as in-person explanations were no longer possible.
                         </p>
                         <h5>Thought process</h5>
