Added mobile web design mockups

--- a/portfolio-pages/borrowell-credit-builder-marketing-assets.html
+++ b/portfolio-pages/borrowell-credit-builder-marketing-assets.html
@@ -109,7 +109,7 @@
 
                     <div class="section">
                         <h2>Overview</h2>
-                        <p>Borrowell Credit Builder is a financial product that helps members build their payment history, credit history and credit mix. The product launched in May 2022. </p>
+                        <p>Borrowell Credit Builder is a financial product that helps members build their payment history, credit history and credit mix.</p>
                     </div>
 
                     <div class="section">
@@ -169,8 +169,23 @@
                     <div class="section">
                         <h3>Creating a new landing page</h3>
                         <h4>Starting with research</h4>
-                        <p>To gain insights into credit building projects, I initiated competitor research by analyzing how companies are presenting their strategies. A few things were consistent between all of them: concise/catchy copy in the hero, steps/how it works section and a trust/social proof part.                        </p>
+                        <p>To gain insights into credit building projects, I initiated competitor research by analyzing how companies are presenting their strategies.</p> 
                         
+                        <p>A few things are consistent between all of the competitors:</p>
+                        <ul class="bullets">
+                            <li>
+                                <p>Concise/catchy copy in the hero</p>
+                            </li>
+                            <li>
+                                <p>Steps/how it works section</p>
+                            </li>
+                            <li>
+                                <p>Trust/social proof piece</p>
+                            </li>
+                        </ul>
+
+                        <p>This provided me with a starting structure for the Borrowell Credit Builder landing page.</p>
+
                         <img class="img-fluid" src="../img/credit-builder-marketing-assets/competitor-research.png" alt="Competitor websites">
                         <p class="image-caption">Credit building competitors: Koho, Self Inc., Spring and Kikoff.</p>
                     </div>
@@ -190,12 +205,12 @@
 
                     <div class="section">
                         <h4>Iterating to the desired state</h4>
-                        <p>The design of the template featured outdated branding that we had already started to phase out. To achieve the desired state of light backgrounds, I designed landing pages in a progressive manner. Initially, I updated the page content to align more closely with the Credit Builder product, incorporating testimonials specific to the product, rather than solely from the Borrowell app. Next, I created a version of the landing page with lighter backgrounds, which aligned with our branding shift, and allowed the graphics to stand out more prominently.</p>
+                        <p>The design of the template featured outdated branding that we had already started to phase out. To achieve the desired state of light backgrounds, I designed landing pages in a progressive manner. Initially, I updated the page content to align more closely with the Credit Builder product. Next, I created a version of the landing page with lighter backgrounds, which aligned with our visual branding shift, which enabled the graphics to stand out more.</p>
                     </div>
 
                     <div class="section">
-                        <img class="img-fluid" src="../img/credit-builder-marketing-assets/credit-builder-landing-page-progression.png" alt="Credit Builder landing page progression from saturated to lighter backgrounds">
-                        <p class="image-caption">Iteration with updated content, but saturated backgrounds (left). Iteration with the desired state of lighter backgrounds (right).</p>
+                        <img class="img-fluid" src="../img/credit-builder-marketing-assets/credit-builder-landing-page-mobile.png" alt="Credit Builder landing page end state">
+                        <p class="image-caption">Ideal end state of the Borrowell Credit Builder landing page with updated content and light backgrounds.</p>
                     </div>
 
                    <div class="section">
